compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__assignment_pattern_invalid_bit_segment.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1199
expression: "\nfn main() {\n    let <<b1, pub>> = <<24, 3>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
    let <<b1, pub>> = <<24, 3>>
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:15
  │
3 │     let <<b1, pub>> = <<24, 3>>
  │               ^^^ I was not expecting this

Found the keyword `pub`, expected one of: 
- `>>`
- a bit array segment pattern
